--- a/home.html
+++ b/home.html
@@ -160,17 +160,20 @@
 
             document.getElementById("dump").onclick = function () {
                 var xhr = new XMLHttpRequest();
-                xhr.open("POST", "http://localhost:5000/dump", true);
+                xhr.open("POST", "/dump", true);
                 xhr.setRequestHeader("Content-Type", "application/json");
                 var logContent = log.innerText || log.textContent;
-                xhr.send(JSON.stringify({ log: logContent }));
-                xhr.onload = function () {
-                    if (xhr.status == 200) {
-                        location.href = "http://localhost:5000/download";
-                    } else {
-                        alert("Failed to dump chat log");
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === XMLHttpRequest.DONE) {
+                        if (xhr.status === 200) {
+                            location.href = "/download";
+                        } else {
+                            console.error("Failed to dump log:", xhr.responseText);
+                        }
                     }
                 };
+
+                xhr.send(JSON.stringify({ log: logContent }));
             };
 
             if (window["WebSocket"]) {
